--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="row gy-5" data-aos="fade-in">
         <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
           <h2>Welcome to the <span>WyoSky DAO</span></h2>
-          <p>The Web3 economic engine (Meta-DAO) for the emerging space industry. We innovate and creates digital space assets, governance, currencies and culture</p>
+          <p>The Web3 economic engine (Meta-DAO) for the emerging space industry. We innovate and create digital assets, governance, currencies and culture</p>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#clients" class="btn-get-started">Learn More</a>
         <!--    <a href="https://www.youtube.com/watch?v=" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
@@ -147,7 +147,7 @@
         <div class="row gy-4">
           <div class="col-lg-6">
             <h3>Democratizing Access to Digital Space Assets</h3>
-            <p>Our economic model enables participants to access space investments through our decentralized financial tooling. The digital asset securty, development, and compliance councils discern the available funding opportunities to contribute to the Digital Space Asset ecosystem. These Digital Space Assets
+            <p>Our economic model enables participants to access space investments through our decentralized financial tooling. The digital asset security, development, and compliance councils discern the available funding opportunities to contribute to the Digital Space Asset ecosystem. These Digital Space Assets
               will encompass many sectors within the space industry from infrastructure, communications, satellites, data, launch, and tourism.</p>
               <img src="assets/img/about.jpg" class="img-fluid rounded-4 mb-4" alt="">
 
